--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
+  "name": "dishes",
+  "version": "0.0.1",
+  "description": "Text who's week it is for dishes",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "twilio": "*",
+    "node-schedule": "*"
   },
   "engines": {
     "node": "0.10.x"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
   "license": "MIT"
 }
