--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "express": "~4.9.x",
     "twilio": "*",
-    "node-schedule": "*",
-    "newrelic": "*"
+    "node-schedule": "*"
   },
   "engines": {
     "node": "0.10.x"
